--- a/Web.config
+++ b/Web.config
@@ -1,12 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name="MySqlConn" connectionString="server=localhost;database=ferro_oriente;uid=root;pwd=tu_password;SslMode=None;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+  <appSettings>
+    <add key="AdminSeedEmail" value="bo0310042024@unab.edu.sv" />
+    <add key="AdminSeedPassword" value="Admin@123" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <globalization culture="es-SV" uiCulture="es" />
   </system.web>
   <system.codedom>
     <compilers>
